FAST method_description

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b7ed983eade50c1ea4fdfa6f96f8e2ac9c04e4df1c71ef2d50ddde24b12e4f79"
+  "signature": "sha256:f2dbd9238424fe15aea3b6cc6230eaf8bc1fd8d47642603b2067b4a3a3b0e972"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -445,7 +445,48 @@
       "        E-mail: evgeny.schneidmiller@desy.de\n",
       "        Tel. +49 40 8998 2676''','s'),\n",
       "        'data_description':(f_readme.readlines(),'s'),\n",
-      "        'method_description':(r'''code FAST''','s'),\n",
+      "        'method_description':(r'''\n",
+      "        FEL simulation code FAST (E.A. Schneidmiller and M. V. Yurkov)\n",
+      "\n",
+      "        FAST is generic name for a set of codes for analysis of the FEL amplification \n",
+      "        process in the framework of 1-D and 3-D models using different techniques\n",
+      "        described in [1-5]. Analytical techniques implemented in these codes allow to\n",
+      "        analyze beam radiation modes (eigenvalue equation), and amplification process\n",
+      "        in the linear stage of amplification (initial-value problem). Numerical\n",
+      "        simulation codes allow to simulate FEL process using both, steady-state and\n",
+      "        time-dependent models. Algorithm of three-dimensional simulation code FAST [6]\n",
+      "        takes into account all important physical effects: diffraction of radiation,\n",
+      "        slippage of radiation (time-dependent effects), space charge, emittance\n",
+      "        (betatron oscillations), and energy spread in the electron beam. An\n",
+      "        approximation a uniform electron beam focusing is used in the simulation code.\n",
+      "        Field solver uses expansion of the radiation in the azimuthal modes.\n",
+      "        Calculation of the radiation fields is performed using retarded potentials.\n",
+      "        The code allows to simulate amplification process in helical and planar\n",
+      "        undulators. Simulation of higher odd harmonics in the planar undulator\n",
+      "        geometry is possible [6]. The code has been thoroughly tested in the high gain\n",
+      "        exponential regime using analytical results for the beam radiation modes\n",
+      "        (complex eigenvalues and eigenfunctions) [1-3]. Start-up from the shot noise\n",
+      "        and linear stage of amplification in the code FAST has been also tested using\n",
+      "        three-dimensional analytical results for the initial-value problem [4].\n",
+      "\n",
+      "        Start-up from the shot noise in the electron beam in the code FAST can be\n",
+      "        simulated with an artificial ensemble [7,8], and with tracing actual number of\n",
+      "        electrons in the beam [9]. The latter option is straightforward and\n",
+      "        transparent: simulation procedure corresponds to real electrons randomly\n",
+      "        distributed in full 6D phase space. This allows us to avoid any artificial\n",
+      "        effects arising from standard procedures of macroparticle loading as it\n",
+      "        described in [9].\n",
+      "\n",
+      "        [1] E.L. Saldin, E.A. Schneidmiller, M.V. Yurkov, ``The Physics of Free Electron Lasers'' (Springer-Verlag, Berlin, 1999).\n",
+      "        [2] E.L. Saldin, E.A. Schneidmiller and M.V. Yurkov, Nucl. Instrum. and Methods A 475 (2001) 86.\n",
+      "        [3] E.A. Schneidmiller and M.V. Yurkov, Phys. Rev. ST Accel. Beams 15 (2012) 080702.\n",
+      "        [4] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov, Opt. Commun. 186(2000)185.\n",
+      "        [5] E.A. Schneidmiller, and M.V. Yurkov, Proc. FEL 2012 Conference, http://accelconf.web.cern.ch/AccelConf/FEL2012/papers/ mopd08.pdf.\n",
+      "        [6] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov, Nucl. Instrum. and Methods A 429(1999)233.\n",
+      "        [7] C. Penman, B.W.J. McNeil, Optics Comm. 90 (1992) 82.\n",
+      "        [8] W.M. Fawley, Phys. Rev. STAB 5(2002)070701.\n",
+      "        [9] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov,Opt. Commun. 281(2008)1179.\n",
+      "          ''','s'),\n",
       "        'package_version':(r'''FAST v2.06''','s')}\n",
       "    wf_struct['history/parent/detail']={\n",
       "                                        'params':(f_internal.readlines(),'s')}"
