make pulse centered

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f2dbd9238424fe15aea3b6cc6230eaf8bc1fd8d47642603b2067b4a3a3b0e972"
+  "signature": "sha256:bffe4cd30ab6653a5a85b5cedd62ab3b9b9878f24d854790564cd99f534ec2a0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -513,8 +513,10 @@
       "    nEnd=nrows/(2*nx*nx)\n",
       "    xMin = -xStep*(nx-1)/2\n",
       "    xMax =  xStep*(nx-1)/2\n",
-      "    slMin = slMin0 + (nStart-1)*slStep\n",
-      "    slMax = slMin0 + (nEnd - 1)*slStep\n",
+      "    #slMin = slMin0 + (nStart-1)*slStep\n",
+      "    #slMax = slMin0 + (nEnd - 1)*slStep\n",
+      "    slMin = -slStep*(nEnd - 1)/2\n",
+      "    slMax =  slStep*(nEnd - 1)/2\n",
       "    if doPrint: print 'wl [nm], Eph [keV]',wl*1e9,photonEnergy*1e-3\n",
       "    if doPrint: print 'nStart,nEnd: ',nStart,nEnd\n",
       "    if doPrint: print 'nSlices,slMin,slMax [fs]: ',nEnd,slMin*1e15,slMax*1e15\n",
