--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:bffe4cd30ab6653a5a85b5cedd62ab3b9b9878f24d854790564cd99f534ec2a0"
+  "signature": "sha256:36f959ec8cc8806a87995d733b7fc5ad9ea4b4ee134d21fc64de13870661b9d3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -481,7 +481,8 @@
       "        [2] E.L. Saldin, E.A. Schneidmiller and M.V. Yurkov, Nucl. Instrum. and Methods A 475 (2001) 86.\n",
       "        [3] E.A. Schneidmiller and M.V. Yurkov, Phys. Rev. ST Accel. Beams 15 (2012) 080702.\n",
       "        [4] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov, Opt. Commun. 186(2000)185.\n",
-      "        [5] E.A. Schneidmiller, and M.V. Yurkov, Proc. FEL 2012 Conference, http://accelconf.web.cern.ch/AccelConf/FEL2012/papers/ mopd08.pdf.\n",
+      "        [5] E.A. Schneidmiller, and M.V. Yurkov, Proc. FEL 2012 Conference, \n",
+      "        http://accelconf.web.cern.ch/AccelConf/FEL2012/papers/ mopd08.pdf.\n",
       "        [6] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov, Nucl. Instrum. and Methods A 429(1999)233.\n",
       "        [7] C. Penman, B.W.J. McNeil, Optics Comm. 90 (1992) 82.\n",
       "        [8] W.M. Fawley, Phys. Rev. STAB 5(2002)070701.\n",
