add proper FAST version

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:5147cad03058a4e95086e0dcfc33869b0ac5380628f104c00011a51d950469eb"
+  "signature": "sha256:9ccb114e0f717a05b8406f6ae3473431630a36c0b942af79bbd3911759e4a9fc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -477,7 +477,7 @@
       "        [8] W.M. Fawley, Phys. Rev. STAB 5(2002)070701.\n",
       "        [9] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov,Opt. Commun. 281(2008)1179.\n",
       "          ''','s'),\n",
-      "        'package_version':(r'''FAST v2.06''','s')}\n",
+      "        'package_version':(r'''fast-2013-v2-06''','s')}\n",
       "    wf_struct['history/parent/detail']={\n",
       "                                        'params':(f_internal.readlines(),'s')}"
      ],
