do removing tmp dir out of jmax loop

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9ccb114e0f717a05b8406f6ae3473431630a36c0b942af79bbd3911759e4a9fc"
+  "signature": "sha256:c171573b84c2c2c767b3e12a53e6d3704eaef000a23d9c0bbcd48da444b3c12c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -760,13 +760,14 @@
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
-      "        shutil.rmtree(tmp_dir)\n",
       "\n",
       "        print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
       "        print out_dir+'/'+ prop_in_fname            \n",
       "        shutil.move(os.path.join(work_dir,out_fname), \n",
       "                            os.path.join(out_dir,prop_in_fname))\n",
-      "        os.chdir(work_dir)"
+      "        os.chdir(work_dir)\n",
+      "                \n",
+      "    shutil.rmtree(tmp_dir)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -832,7 +833,6 @@
       "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
       "        \n",
       "        shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
-      "        shutil.rmtree(tmp_dir)\n",
       "    \n",
       "        if doCopyRes:\n",
       "            print 'The result hdf5 file  '+out_fname+' will be copied/moved to '\n",
@@ -844,7 +844,9 @@
       "        else:\n",
       "            print out_fname, prop_in_fname\n",
       "            print '... done'\n",
-      "        os.chdir(work_dir)"
+      "        os.chdir(work_dir)\n",
+      "        \n",
+      "    shutil.rmtree(tmp_dir)\n"
      ],
      "language": "python",
      "metadata": {},
