removing jmax loop, suffix option

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:c171573b84c2c2c767b3e12a53e6d3704eaef000a23d9c0bbcd48da444b3c12c"
+  "signature": "sha256:e811e103031b9adf14c2b1543f8680052996d28208c59666f577159bc22cb1e3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -129,12 +129,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def set_out_name(prefix,idx):\n",
+      "def set_out_name(prefix,suffix):\n",
       "    \"\"\"\n",
       "    Set the output h5 file name \n",
-      "    of prefix and 7-digit suffix\n",
+      "    of prefix and suffix\n",
       "    \"\"\"\n",
-      "    name=\"%s_%s.h5\" %(prefix,str(idx).zfill(7))\n",
+      "    name=\"%s_%s.h5\" %(prefix,suffix)\n",
       "    return name"
      ],
      "language": "python",
@@ -636,7 +636,7 @@
       "                                             #'fwhm_curve':(fwhm_data,'f') #<- not defined for long pulse data\n",
       "    \n",
       "    #store wavefront in hdf5 file\n",
-      "    fname0 = set_out_name(namg+str(nzc).zfill(3),ifb)\n",
+      "    fname0 = set_out_name(namg+str(nzc).zfill(3),str(ifb).zfill(4))\n",
       "    if doPrint: print \"Store wavefront in hdf5 file: \"+fname0\n",
       "    store_wavefront_hdf5(wf_struct,fname0)\n",
       "    add_wf_attributes(fname0)\n",
@@ -657,8 +657,8 @@
       "    parser = OptionParser()\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
       "    parser.add_option(\"-d\", \"--data-path\",           dest=\"datapath\",help=\"FEL data path\", )\n",
-      "    parser.add_option(\"-f\", \"--file-id\",             dest=\"f_id\",    help=\"ID of the first of output files: FELsource_out_<ID+{0..JMAX-1}>\", )\n",
-      "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\",    help=\"how many output pulses should be provided (1 by default)\", )\n",
+      "    parser.add_option(\"-f\", \"--suffix\",              dest=\"suffix\",help=\"suffix for the first output file: FELsource_out_<suffix>\", )\n",
+      "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\",    help=\"how many output pulses should be generated (1 if not specified)\", )\n",
       "    parser.add_option(\"-t\", \"--time-start\",          dest=\"trd1\",    help=\"Start time value for reading the pulse, fs\")\n",
       "    parser.add_option(\"-q\", \"--time-end\",            dest=\"trd2\",    help=\"End time value for reading the pulse, fs\")\n",
       "    parser.add_option(\"-n\", \"--nxy\",                 dest=\"nxy\",     help=\"Number of xy nodes\")\n",
@@ -680,10 +680,10 @@
       "    else:\n",
       "        fel_data_path=options.datapath\n",
       "        \n",
-      "    if not options.f_id:   # if time value not given\n",
-      "        f_id = 1 #default value\n",
+      "    if not options.suffix:   # if suffix not given\n",
+      "        suffix=str(1).zfill(7) #default value\n",
       "    else:\n",
-      "        f_id=int(float(options.f_id))\n",
+      "        suffix=options.suffix\n",
       "\n",
       "    if not options.trd1:   # if time value not given\n",
       "        trd1 = 0.\n",
@@ -699,6 +699,11 @@
       "        nzc=35 #default value\n",
       "    else:\n",
       "        nzc=int(float(options.nzc))\n",
+      "\n",
+      "    if not options.ifb:   # if ifb value not given\n",
+      "        ifb=None\n",
+      "    else:\n",
+      "        ifb=int(float(options.ifb))\n",
       "\n",
       "    if not options.nskip:   # if nskip value not given\n",
       "        nskip=1 # no skip\n",
@@ -730,9 +735,8 @@
       "    fast_internal = os.path.join(fel_data_path,'FAST_2013.DAT')\n",
       "    \n",
       "    #doPrint = True # switch on/off debug printing    \n",
-      "    doCopyRes = True # switch on/off copying results into FELsource/prop_in_XXX.h5    \n",
       "    if isS2E: \n",
-      "        work_dir ='/data/S2E/data/FELsource/';doCopyRes=True\n",
+      "        work_dir ='/data/S2E/data/FELsource/';\n",
       "    else:\n",
       "        out_dir = '/diskmnt/a/lsamoylv/sim_data/FELsource'\n",
       "        work_root_dir = '/diskmnt/a/lsamoylv/FELsource/' #working directory to process the data \n",
@@ -745,29 +749,24 @@
       "        print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
       "    os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    for idx in range(0,jmax):\n",
-      "        ifb = idx+f_id\n",
-      "        namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
-      "        if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
-      "        shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
-      "        shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
-      "        os.chdir(tmp_dir)\n",
-      "        in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
-      "        out_fname     = set_out_name(in_fname,       (f_id+idx))\n",
-      "        prop_in_fname = set_out_name('FELsource_out',(f_id+idx))\n",
+      "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
+      "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
+      "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
+      "    shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
+      "    os.chdir(tmp_dir)\n",
+      "    in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
+      "    out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    prop_in_fname = set_out_name('FELsource_out',suffix)\n",
       "        \n",
-      "        if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
-      "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
-      "        \n",
-      "        shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
-      "\n",
-      "        print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
-      "        print out_dir+'/'+ prop_in_fname            \n",
-      "        shutil.move(os.path.join(work_dir,out_fname), \n",
-      "                            os.path.join(out_dir,prop_in_fname))\n",
-      "        os.chdir(work_dir)\n",
-      "                \n",
-      "    shutil.rmtree(tmp_dir)\n"
+      "    if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
+      "    os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
+      "    shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
+      "    print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
+      "    print out_dir+'/'+ prop_in_fname            \n",
+      "    shutil.move(os.path.join(work_dir,out_fname), \n",
+      "                os.path.join(out_dir,prop_in_fname))\n",
+      "    os.chdir(work_dir)\n",
+      "    shutil.rmtree(tmp_dir)"
      ],
      "language": "python",
      "metadata": {},
@@ -793,7 +792,7 @@
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/'\n",
       "    dir_prefix='2014-05_XFEL_5keV_12GeV_';\n",
       "    in_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    e_charge='20pC';f_id=1;trd1=1.5;trd2=6.5;nskip=7;nzc=35;jmax=1\n",
+      "    e_charge='20pC';suffix='0000001';trd1=1.5;trd2=6.5;nskip=7;nzc=35\n",
       "    fel_data_dir=dir_prefix+e_charge+'_N1'\n",
       "    nharm = NHARM\n",
       "    \n",
@@ -817,35 +816,23 @@
       "        print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
       "    os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    for idx in range(0,jmax):\n",
-      "        ifb = idx+f_id\n",
-      "        namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
-      "        if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
-      "        shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
-      "        shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
+      "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
+      "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
+      "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
+      "    shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
+      "    os.chdir(tmp_dir)\n",
+      "    in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
+      "    out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    prop_in_fname = set_out_name('FELsource_out',suffix)\n",
       "        \n",
-      "        os.chdir(tmp_dir)\n",
-      "        in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
-      "        out_fname     = set_out_name(in_fname,       (f_id+idx))\n",
-      "        prop_in_fname = set_out_name('FELsource_out',(f_id+idx))\n",
-      "        \n",
-      "        if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
-      "        os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
-      "        \n",
-      "        shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
-      "    \n",
-      "        if doCopyRes:\n",
-      "            print 'The result hdf5 file  '+out_fname+' will be copied/moved to '\n",
-      "            print out_dir+'/'+ prop_in_fname\n",
-      "            if jmax == 1:\n",
-      "                shutil.move(os.path.join(work_dir,   out_fname), os.path.join(out_dir,prop_in_fname))\n",
-      "            else:\n",
-      "                shutil.copy(os.path.join(work_dir,   out_fname), os.path.join(out_dir,prop_in_fname))\n",
-      "        else:\n",
-      "            print out_fname, prop_in_fname\n",
-      "            print '... done'\n",
-      "        os.chdir(work_dir)\n",
-      "        \n",
+      "    if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
+      "    os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
+      "    shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
+      "    print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
+      "    print out_dir+'/'+ prop_in_fname            \n",
+      "    shutil.move(os.path.join(work_dir,out_fname), \n",
+      "                os.path.join(out_dir,prop_in_fname))\n",
+      "    os.chdir(work_dir)\n",
       "    shutil.rmtree(tmp_dir)\n"
      ],
      "language": "python",
