--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e811e103031b9adf14c2b1543f8680052996d28208c59666f577159bc22cb1e3"
+  "signature": "sha256:ba42fc08f31c67bf8110473336712bb0103b2c87a7afc2e33016dbc06dc7bf2e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -657,7 +657,7 @@
       "    parser = OptionParser()\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
       "    parser.add_option(\"-d\", \"--data-path\",           dest=\"datapath\",help=\"FEL data path\", )\n",
-      "    parser.add_option(\"-f\", \"--suffix\",              dest=\"suffix\",help=\"suffix for the first output file: FELsource_out_<suffix>\", )\n",
+      "    parser.add_option(\"-f\", \"--suffix\",              dest=\"suffix\",  help=\"suffix for the first output file: FELsource_out_<suffix>\", )\n",
       "    parser.add_option(\"-j\", \"--jmax\",                dest=\"jmax\",    help=\"how many output pulses should be generated (1 if not specified)\", )\n",
       "    parser.add_option(\"-t\", \"--time-start\",          dest=\"trd1\",    help=\"Start time value for reading the pulse, fs\")\n",
       "    parser.add_option(\"-q\", \"--time-end\",            dest=\"trd2\",    help=\"End time value for reading the pulse, fs\")\n",
@@ -731,7 +731,6 @@
       "    \n",
       "    fel_data_path=fel_data_path+fel_data_dir\n",
       "    in_fast2xydat = os.path.join(fel_data_path,in_fast2xydat) \n",
-      "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_readme.txt')\n",
       "    fast_internal = os.path.join(fel_data_path,'FAST_2013.DAT')\n",
       "    \n",
       "    #doPrint = True # switch on/off debug printing    \n",
@@ -750,6 +749,7 @@
       "    os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
+      "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_N1_readme.txt')\n",
       "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
       "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
       "    shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
