conditional for internal (detail) info

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ba42fc08f31c67bf8110473336712bb0103b2c87a7afc2e33016dbc06dc7bf2e"
+  "signature": "sha256:e78e418c6e4759f4f3a1f013485b9a4ec19114a4cda3e1b2bcf25b9cc7707c84"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -420,7 +420,6 @@
       "    contact/ info, data_description from readme file\n",
       "    \"\"\"\n",
       "    f_readme = open(fast_readme,'r')\n",
-      "    f_internal = open(fast_internal,'r')\n",
       "    wf_struct['history/parent/info']={\n",
       "        'contact':(r'''Mikhail Yurkov\n",
       "        Evgeny Schneidmiller\n",
@@ -478,8 +477,10 @@
       "        [9] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov,Opt. Commun. 281(2008)1179.\n",
       "          ''','s'),\n",
       "        'package_version':(r'''fast-2013-v2-06''','s')}\n",
-      "    wf_struct['history/parent/detail']={\n",
-      "                                        'params':(f_internal.readlines(),'s')}"
+      "    if os.path.isfile(f_internal):\n",
+      "        f_internal = open(fast_internal,'r')\n",
+      "        wf_struct['history/parent/detail']={'params':(f_internal.readlines(),'s')}\n",
+      "        "
      ],
      "language": "python",
      "metadata": {},
