conditional for internal (detail) info 2

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e78e418c6e4759f4f3a1f013485b9a4ec19114a4cda3e1b2bcf25b9cc7707c84"
+  "signature": "sha256:0aa2a7cfcab2c76c2234e0a217a75ad72bf3584ddf98ff768f2a494e201eb39e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -477,7 +477,7 @@
       "        [9] E.L. Saldin, E.A. Schneidmiller, and M.V. Yurkov,Opt. Commun. 281(2008)1179.\n",
       "          ''','s'),\n",
       "        'package_version':(r'''fast-2013-v2-06''','s')}\n",
-      "    if os.path.isfile(f_internal):\n",
+      "    if os.path.isfile(fast_internal):\n",
       "        f_internal = open(fast_internal,'r')\n",
       "        wf_struct['history/parent/detail']={'params':(f_internal.readlines(),'s')}\n",
       "        "
