resize to reduce FELsource_out

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0aa2a7cfcab2c76c2234e0a217a75ad72bf3584ddf98ff768f2a494e201eb39e"
+  "signature": "sha256:7f56cbc23cc07e2beba6f499a225cf7dc539035f9927ed0c0b8c2e9572fdd17e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -562,7 +562,9 @@
       "    wf_struct.load_hdf5(in_fname)\n",
       "    wfr = wf_struct._srwl_wf\n",
       "    wf_struct = Wavefront(wfr)\n",
-      "    if doPrint: print('Saving the wavefront data with attributes:'+bare_fname)\n",
+      "    if doPrint: print('Resizing and saving the wavefront data with attributes:'+bare_fname)\n",
+      "    #Resizing: decreasing Range of Horizontal and Vertical Position:\n",
+      "    wpg.srwlib.srwl.ResizeElecField(wfr._srwl_wf, 'c', [0, 0.5, 1, 0.5,  1]);\n",
       "    wf_struct.store_hdf5(bare_fname)\n",
       "    if doPrint: print('Replacing data with attributes from  '+bare_fname)\n",
       "    with h5py.File(bare_fname) as h2:\n",
@@ -611,6 +613,7 @@
       "    RK1,nStart,nEnd = fill_wf_params(wf_struct, params,numpy.size(rows))\n",
       "    #build numpy arrays from list of rows\n",
       "    wf_data=create_numpy_array_from_rows(rows,slices=range(nStart-1,nEnd))\n",
+      "\n",
       "    del rows\n",
       "    wf_struct['data']={\n",
       "                       'arrEhor':(wf_data*numpy.sqrt(RK1),'f'),\n",
