--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7f56cbc23cc07e2beba6f499a225cf7dc539035f9927ed0c0b8c2e9572fdd17e"
+  "signature": "sha256:f6bf728236bb2e46a7a64e3c848a6574e584b86ee6117c5e7fdf51694f66c853"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -564,7 +564,8 @@
       "    wf_struct = Wavefront(wfr)\n",
       "    if doPrint: print('Resizing and saving the wavefront data with attributes:'+bare_fname)\n",
       "    #Resizing: decreasing Range of Horizontal and Vertical Position:\n",
-      "    wpg.srwlib.srwl.ResizeElecField(wfr._srwl_wf, 'c', [0, 0.5, 1, 0.5,  1]);\n",
+      "    from wpg.srwlib import srwl\n",
+      "    srwl.ResizeElecField(wfr, 'c', [0, 0.5, 1, 0.5,  1]);\n",
       "    wf_struct.store_hdf5(bare_fname)\n",
       "    if doPrint: print('Replacing data with attributes from  '+bare_fname)\n",
       "    with h5py.File(bare_fname) as h2:\n",
