--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -33,7 +33,8 @@
       "    isIpynb = False  # at S2E we only run the python script \n",
       "     \n",
       "isLP = False\n",
-      "NHARM = 1"
+      "NHARM = 1\n",
+      "RESIZING = 0.5"
      ],
      "language": "python",
      "metadata": {},
@@ -53,7 +54,8 @@
       "    doPrint = False\n",
       "else:\n",
       "    #sys.path.insert(0,'../..')\n",
-      "    sys.path.insert(0,'/diskmnt/a/lsamoylv/WPG')\n",
+      "#    sys.path.insert(0,'/diskmnt/a/lsamoylv/WPG')\n",
+      "    sys.path.insert(0,'/diskmnt/a/lsamoylv/test/WPG-feature-srw-update')\n",
       "    doPrint = True\n",
       "\n",
       "import shutil\n",
@@ -561,10 +563,15 @@
       "    wf_struct=Wavefront()\n",
       "    wf_struct.load_hdf5(in_fname)\n",
       "    wfr = wf_struct._srwl_wf\n",
-      "    if doPrint: print('Resizing and saving the wavefront data with attributes:'+bare_fname)\n",
-      "    #Resizing: decreasing Range of Horizontal and Vertical Position:\n",
-      "    from wpg.srwlib import srwl\n",
-      "    srwl.ResizeElecField(wfr, 'c', [0, 0.5, 1, 0.5,  1]);\n",
+      "    if RESIZING < 1.:\n",
+      "        wf_struct=Wavefront()\n",
+      "        wf_struct.load_hdf5(fname0)\n",
+      "        wfr = wf_struct._srwl_wf\n",
+      "        from wpg.srwlib import srwl\n",
+      "        srwl.ResizeElecField(wfr, 'c', [0, RESIZING, 1, RESIZING,  1]);\n",
+      "        #wf_struct.store_hdf5(fname0)            \n",
+      "    wf_struct = Wavefront(wfr)\n",
+      "    if doPrint: print('Saving the wavefront data with attributes:'+bare_fname)\n",
       "    wf_struct = Wavefront(wfr)\n",
       "    wf_struct.store_hdf5(bare_fname)\n",
       "    if doPrint: print('Replacing data with attributes from  '+bare_fname)\n",
@@ -572,9 +579,11 @@
       "        with h5py.File(in_fname) as h1:\n",
       "            try:\n",
       "                del h1['params']  # delete group\n",
+      "                del h1['data']  # delete group\n",
       "            except KeyError:\n",
       "                pass\n",
-      "            h2.copy('params',h1) #copy h2['params'] to h1"
+      "            h2.copy('params',h1) #copy h2['params'] to h1\n",
+      "            h2.copy('data',h1)   #copy h2['data'] to h1"
      ],
      "language": "python",
      "metadata": {},
@@ -640,6 +649,13 @@
       "                                             }\n",
       "                                             #'fwhm_curve':(fwhm_data,'f') #<- not defined for long pulse data\n",
       "    \n",
+      "    if doPrint: print('Resizing the wavefront data ...')\n",
+      "    #Resizing: decreasing Range of Horizontal and Vertical Position:\n",
+      "    reSize = RESIZING\n",
+      "    wf_struct['misc']={\n",
+      "                       'resizing':(reSize,'f')\n",
+      "                       }\n",
+      "\n",
       "    #store wavefront in hdf5 file\n",
       "    fname0 = set_out_name(namg+str(nzc).zfill(3),str(ifb).zfill(4))\n",
       "    if doPrint: print \"Store wavefront in hdf5 file: \"+fname0\n",
@@ -797,13 +813,13 @@
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/'\n",
       "    dir_prefix='2014-05_XFEL_5keV_12GeV_';\n",
       "    in_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    e_charge='20pC';suffix='0000001';trd1=1.5;trd2=6.5;nskip=7;nzc=35\n",
+      "    e_charge='20pC';ifb=1;suffix='0000001';trd1=1.5;trd2=6.5;nskip=7;nzc=35\n",
       "    fel_data_dir=dir_prefix+e_charge+'_N1'\n",
       "    nharm = NHARM\n",
       "    \n",
       "    fel_data_path=fel_data_path+fel_data_dir\n",
       "    in_fast2xydat = os.path.join(fel_data_path,in_fast2xydat) \n",
-      "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_readme.txt')\n",
+      "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_N1_readme.txt')\n",
       "    fast_internal = os.path.join(fel_data_path,'FAST_2013.DAT')\n",
       "    doPrint = True # switch on/off debug printing    \n",
       "    doCopyRes = True # switch on/off copying results into FELsource/prop_in_XXX.h5    \n",
@@ -868,7 +884,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "NHARM"
+      "#NHARM"
      ],
      "language": "python",
      "metadata": {},
@@ -877,7 +893,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "#ls /pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/2014-05_XFEL_5keV_12GeV_20pC_N1/*readme.txt"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
