--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3ba9526627567f598824bb6164540c375bac82b6932ae740e03cca3092610483"
+  "signature": "sha256:cba2176759637997ffc59f46b803770946bef8cda826919fb101aa97ba21d748"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -810,7 +810,7 @@
       "    #                --time-start=1.5 --time-end=6.5 --skip-nslices=7 \\\n",
       "    #                --e-charge='20pC' --zc-point-num=35 --jmax=1\n",
       "\n",
-      "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/'\n",
+      "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/sim/fast/public' #'/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/'\n",
       "    dir_prefix='2014-05_XFEL_5keV_12GeV_';\n",
       "    in_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    e_charge='20pC';ifb=1;suffix='0000001';trd1=1.5;trd2=6.5;nskip=7;nzc=35\n",
