--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1a9772ffaec92486b26c95b6d6a59375ac836650f4f27f035cb2dc4ac30eee9c"
+  "signature": "sha256:a041ec87c422ded348b5461db2cda729a6eaeba647237de745faecfda729d34d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -769,7 +769,9 @@
       "        print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
       "    os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
+      "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,nskip=nskip,nzc=nzc) \n",
+      "    # [LS-2014-12-16] run number should be taken from fast2xydat!\n",
+      "#    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
       "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_N1_readme.txt')\n",
       "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
       "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
