fixed issue 17 and specified relative paths

--- a/fast2h5_new_SP.ipynb
+++ b/fast2h5_new_SP.ipynb
@@ -28,10 +28,7 @@
      "collapsed": false,
      "input": [
       "isS2E = True        # True if working at S2E server, make it True before downloading as .py!\n",
-      "isIpynb = False       # True if working with iPython notebook\n",
-      "if isS2E:\n",
-      "    isIpynb = False  # at S2E we only run the python script \n",
-      "     \n",
+      "isIpynb = True       # True if working with iPython notebook\n",
       "isLP = False\n",
       "NHARM = 1\n",
       "RESIZING = 0.5"
@@ -50,12 +47,12 @@
       "import errno\n",
       "\n",
       "if isS2E:\n",
-      "    sys.path.insert(0,'/data/S2E/packages/WPG')\n",
+      "    sys.path.insert(0,'../../packages/WPG')\n",
       "    doPrint = False\n",
       "else:\n",
       "    #sys.path.insert(0,'../..')\n",
       "#    sys.path.insert(0,'/diskmnt/a/lsamoylv/WPG')\n",
-      "    sys.path.insert(0,'/diskmnt/a/lsamoylv/test/WPG-feature-srw-update')\n",
+      "    sys.path.insert(0,os.path.join(ROOT_DIR,'test/WPG-feature-srw-update'))\n",
       "    doPrint = True\n",
       "\n",
       "import shutil\n",
@@ -558,7 +555,7 @@
       "    using WPG/SRWlib interface   \n",
       "    \"\"\"\n",
       "    in_fname   = fname0\n",
-      "    bare_fname = fname0+'bare.h5'\n",
+      "    bare_fname = os.path.splitext(fname0)[0]+'_bare.h5'\n",
       "    if doPrint: print('Loading wavefront data from the file:     '+in_fname)\n",
       "    wf_struct=Wavefront()\n",
       "    wf_struct.load_hdf5(in_fname)\n",
@@ -649,10 +646,12 @@
       "                                             }\n",
       "                                             #'fwhm_curve':(fwhm_data,'f') #<- not defined for long pulse data\n",
       "    \n",
+      "\n",
       "    if doPrint: print('Resizing the wavefront data ...')\n",
       "    #Resizing: decreasing Range of Horizontal and Vertical Position:\n",
       "    reSize = RESIZING\n",
       "    wf_struct['misc']={\n",
+      "                       'electricField':('horizontal','s'), #fix issue #17\n",
       "                       'resizing':(reSize,'f')\n",
       "                       }\n",
       "\n",
@@ -673,9 +672,13 @@
      "input": [
       "def main():\n",
       "    # typical command line parameters:\n",
-      "    # fast2xy_new.py -i'PPROC-FAST2XY_2013_LP.DAT' --time-start=3. --skip-nslices=8 --zc-point-num=33 --jmax=2\n",
+      "    # $PYTHON $ROOT/modules/FELsource/fast2h5_new_SP.py --suffix=$myInd --prefix=$PREFIX --time-start=$TRD1 \n",
+      "    #                                                   --time-end=$TRD2  --skip-nslices=$NSKIP --e-charge=$CHARGE \n",
+      "    #                                                   --run-number $myRunNum --zc-point-num=$NZC \n",
+      "    #                                                   --output-dir=$PROJECT/FELsource --root_dir = $ROOT\n",
       "    from optparse import OptionParser\n",
       "    parser = OptionParser()\n",
+      "    parser.add_option(\"-u\", \"--root-dir\",            dest=\"root_dir\", help=\"Root directory\", )\n",
       "    parser.add_option(\"-o\", \"--output-dir\",          dest=\"out_dir\", help=\"Output directory\", )\n",
       "    parser.add_option(\"-d\", \"--data-path\",           dest=\"datapath\",help=\"FEL data path\", )\n",
       "    parser.add_option(\"-f\", \"--suffix\",              dest=\"suffix\",  help=\"suffix for the first output file: FELsource_out_<suffix>\", )\n",
@@ -691,6 +694,11 @@
       "\n",
       "    (options, args) = parser.parse_args()\n",
       "       \n",
+      "    if not options.root_dir:   # if output directory not given\n",
+      "        root_dir='/diskmnt/a/lsamoylv'\n",
+      "    else:\n",
+      "        root_dir=options.root_dir\n",
+      "\n",
       "    if not options.out_dir:   # if output directory not given\n",
       "        parser.error('Output directory is not specified')\n",
       "    else:\n",
@@ -754,42 +762,45 @@
       "    in_fast2xydat = os.path.join(fel_data_path,in_fast2xydat) \n",
       "    fast_internal = os.path.join(fel_data_path,'FAST_2013.DAT')\n",
       "    \n",
-      "    #doPrint = True # switch on/off debug printing    \n",
+      "    #doPrint = True # switch on/off debug printing  \n",
       "    if isS2E: \n",
-      "        work_dir ='/data/S2E/modules/FELsource/';\n",
+      "        work_dir = './';\n",
       "    else:\n",
-      "        out_dir = '/diskmnt/a/lsamoylv/sim_data/FELsource'\n",
-      "        work_root_dir = '/diskmnt/a/lsamoylv/FELsource/' #working directory to process the data \n",
-      "        work_dir = work_root_dir+fel_data_dir;\n",
+      "        out_dir = os.path.join(root_dir,'sim_data/FELsource');\n",
+      "        work_root_dir = os.path.join(root_dir, 'FELsource'); #working directory to process the data \n",
+      "        work_dir = os.path.join(work_root_dir,fel_data_dir);\n",
       "        \n",
-      "    tmp_dir = work_dir+'/tmp'\n",
-      "    mkdir_p(out_dir); mkdir_p(work_dir); mkdir_p(tmp_dir)    \n",
+      "    #tmp_dir = os.path.join(work_dir,'tmp');\n",
+      "    mkdir_p(out_dir); mkdir_p('tmp')    \n",
+      "    #mkdir_p(work_dir); \n",
       "    if doPrint: \n",
-      "        print 'The data will be processed in \\n'+ work_dir+'/'\n",
-      "        print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
-      "    os.chdir(work_dir)\n",
+      "        print 'The data will be processed in \\n'+ work_dir\n",
+      "        print 'All temporary files will be saved in \\n'+ 'tmp/'\n",
+      "    #os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,nskip=nskip,nzc=nzc) \n",
       "    # [LS-2014-12-16] run number should be taken from fast2xydat!\n",
       "#    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
       "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_N1_readme.txt')\n",
       "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
-      "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
-      "    shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
-      "    os.chdir(tmp_dir)\n",
+      "    #shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
+      "    #shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
+      "    shutil.copy(fast2xydat, 'tmp/')\n",
+      "    shutil.copy(fast2xyexe, 'tmp/')  \n",
+      "    os.chdir('tmp')\n",
       "    in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
-      "    out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    #out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    out_fname     = in_fname\n",
       "    prop_in_fname = set_out_name('FELsource_out',suffix)\n",
       "        \n",
       "    if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
-      "    os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
-      "    shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
+      "    os.chdir('../')\n",
+      "    os.system('chmod a+rw '+ 'tmp/*.*')    \n",
+      "    shutil.copy('tmp/'+in_fname, out_fname)\n",
       "    print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
       "    print out_dir+'/'+ prop_in_fname            \n",
-      "    shutil.move(os.path.join(work_dir,out_fname), \n",
-      "                os.path.join(out_dir,prop_in_fname))\n",
-      "    os.chdir(work_dir)\n",
-      "    shutil.rmtree(tmp_dir)"
+      "    shutil.move(out_fname, os.path.join(out_dir,prop_in_fname))\n",
+      "    shutil.rmtree('tmp')"
      ],
      "language": "python",
      "metadata": {},
@@ -808,14 +819,20 @@
       "    # (3) before, outside the for-loop, copy PPROC-FAST2XY_2013.DAT from DCACHE to work_dir \n",
       "    \n",
       "    # typical command line parameters:\n",
-      "    # fast2xy_new_SP_mod.py -i'PPROC-FAST2XY_2013.DAT' --prefix='2014-05_XFEL_5keV_12GeV_'\\\n",
-      "    #                --time-start=1.5 --time-end=6.5 --skip-nslices=7 \\\n",
-      "    #                --e-charge='20pC' --zc-point-num=35 --jmax=1\n",
+      "    ## fast2xy_new_SP_mod.py -i'PPROC-FAST2XY_2013.DAT' --prefix='2014-05_XFEL_5keV_12GeV_'\\\n",
+      "    ##                --time-start=1.5 --time-end=6.5 --skip-nslices=7 \\\n",
+      "    ##                --e-charge='20pC' --zc-point-num=35 --jmax=1\n",
+      "    # $PYTHON $ROOT/modules/FELsource/fast2h5_new_SP.py --suffix=$myInd --prefix=$PREFIX --time-start=$TRD1 \n",
+      "    #                                                   --time-end=$TRD2  --skip-nslices=$NSKIP --e-charge=$CHARGE \n",
+      "    #                                                   --run-number $myRunNum --zc-point-num=$NZC \n",
+      "    #                                                   --output-dir=$PROJECT/FELsource --root_dir = $ROOT\n",
       "\n",
+      "    root_dir = '/diskmnt/a/lsamoylv'\n",
+      "    prj_dir = 'sim_5kev_9fs_35_2NIP_EMC_new'\n",
       "    fel_data_path='/pnfs/desy.de/exfel/disk/XFEL/sim/fast/public/' #'/pnfs/desy.de/exfel/disk/XFEL/2013/SIM/FAST/'\n",
       "    dir_prefix='2014-05_XFEL_5keV_12GeV_';\n",
       "    in_fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
-      "    e_charge='20pC';ifb=1;suffix='0000001';trd1=1.5;trd2=6.5;nskip=7;nzc=35\n",
+      "    e_charge='100pC';ifb=1;suffix='0000001';trd1=3.;trd2=29;nskip=12;nzc=35\n",
       "    fel_data_dir=dir_prefix+e_charge+'_N1'\n",
       "    nharm = NHARM\n",
       "    \n",
@@ -826,39 +843,62 @@
       "    doPrint = True # switch on/off debug printing    \n",
       "    doCopyRes = True # switch on/off copying results into FELsource/prop_in_XXX.h5    \n",
       "\n",
-      "    if isIpynb: \n",
-      "        out_dir = '/diskmnt/a/lsamoylv/sim_data/FELsource'\n",
-      "        work_root_dir = '/diskmnt/a/lsamoylv/FELsource/' #working directory to process the data \n",
-      "        work_dir = work_root_dir+fel_data_dir\n",
+      "    #doPrint = True # switch on/off debug printing  \n",
+      "    if isS2E: \n",
+      "        work_dir = './';\n",
+      "        root_dir = os.path.join(root_dir,'S2E');\n",
+      "        out_dir = os.path.join(root_dir,'data',prj_dir,'FELsource');\n",
       "    else:\n",
-      "        work_dir ='/data/S2E/modules/FELsource/'\n",
-      "    tmp_dir = work_dir+'/tmp'\n",
-      "    mkdir_p(out_dir); mkdir_p(work_dir); mkdir_p(tmp_dir)    \n",
+      "        work_dir = os.path.join(root_dir, 'FELsource',fel_data_dir);  #??\n",
+      "        out_dir = os.path.join(root_dir,'sim_data/FELsource');\n",
+      "         \n",
+      "    #tmp_dir = os.path.join(work_dir,'tmp');\n",
+      "    mkdir_p(out_dir); mkdir_p('tmp')    \n",
+      "    #mkdir_p(work_dir); \n",
       "    if doPrint: \n",
-      "        print 'The data will be processed in \\n'+ work_dir+'/'\n",
-      "        print 'All temporary files will be saved in \\n'+ tmp_dir+'/'\n",
-      "    os.chdir(work_dir)\n",
+      "        print 'The data will be processed in \\n'+ work_dir\n",
+      "        print 'All temporary files will be saved in \\n'+ 'tmp/'\n",
+      "    #os.chdir(work_dir)\n",
       "    fast2xyexe='pproc-fast2xy-2013-v2-06-wo-fname.exe';fast2xydat='PPROC-FAST2XY_2013.DAT'\n",
       "    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,nskip=nskip,nzc=nzc) \n",
       "    # [LS-2014-12-16] run number should be taken from fast2xydat!\n",
       "#    namg,ifb,nzc = update(in_fast2xydat,fast2xydat,trd1=trd1,trd2=trd2,ifb=ifb,nskip=nskip,nzc=nzc)\n",
+      "    fast_readme = os.path.join(fel_data_path,dir_prefix+e_charge+'_N1_readme.txt')\n",
       "    if doPrint: print 'namg,ifb,nzc:',namg,ifb,nzc\n",
-      "    shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
-      "    shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
-      "    os.chdir(tmp_dir)\n",
+      "    #shutil.copy(os.path.join(work_dir,fast2xydat), tmp_dir)\n",
+      "    #shutil.copy(os.path.join(work_dir,fast2xyexe), tmp_dir)  \n",
+      "    shutil.copy(fast2xydat, 'tmp/')\n",
+      "    shutil.copy(fast2xyexe, 'tmp/')  \n",
+      "    os.chdir('tmp')\n",
       "    in_fname=convert_fast2h5(fel_data_path,fast2xyexe,fast2xydat,fast_readme,fast_internal,namg,ifb,nzc)\n",
-      "    out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    #out_fname     = set_out_name(in_fname,       suffix)\n",
+      "    out_fname     = in_fname\n",
       "    prop_in_fname = set_out_name('FELsource_out',suffix)\n",
       "        \n",
       "    if doPrint: print 'in_fname,out_fname,prop_in_fname:',in_fname,out_fname,prop_in_fname\n",
-      "    os.system('chmod a+rw '+ tmp_dir+'/*.*')    \n",
-      "    shutil.copy(in_fname, os.path.join(work_dir,out_fname))\n",
+      "    os.chdir('../')\n",
+      "    os.system('chmod a+rw '+ 'tmp/*.*')    \n",
+      "    shutil.copy('tmp/'+in_fname, out_fname)\n",
       "    print 'The result hdf5 file  '+out_fname+' will be moved to '\n",
       "    print out_dir+'/'+ prop_in_fname            \n",
-      "    shutil.move(os.path.join(work_dir,out_fname), \n",
-      "                os.path.join(out_dir,prop_in_fname))\n",
-      "    os.chdir(work_dir)\n",
-      "    shutil.rmtree(tmp_dir)\n"
+      "    shutil.move(out_fname, os.path.join(out_dir,prop_in_fname))\n",
+      "    shutil.rmtree('tmp')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "if doPrint: \n",
+      "    the_file = h5py.File(os.path.join(out_dir,prop_in_fname),\"r\")\n",
+      "    #with the_file as h5file:\n",
+      "    print 'polarization: %s' %(the_file['/misc/electricField'].value)\n",
+      "    the_file = h5py.File(os.path.join(out_dir,prop_in_fname),\"r\")\n",
+      "    misc = the_file['misc']\n",
+      "    print 'misc:%s' %misc.keys()       "
      ],
      "language": "python",
      "metadata": {},
